# karaokay-api

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
karaokay/: __init__.py  __main__.py  conftest.py  settings.py
karaokay/db/: base.py  config.py  utils.py
karaokay/db/models/: __init__.py
karaokay/services/: __init__.py
karaokay/tests/: __init__.py
karaokay/web/: __init__.py  application.py  lifetime.py
karaokay/web/api/: __init__.py  router.py
karaokay/web/api/echo/: __init__.py  views.py
karaokay/web/api/lastfm/: __init__.py  schema.py  views.py
karaokay/web/api/monitoring/: __init__.py
